Fixed some minor warnings